# feedcache

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: reusable-snapshot.yml  test.yml
docs/: design.md  session-log-2026-04-21.md
docs/superpowers/plans/: 2026-04-21-aggregate-common-crawl-integration.md  2026-04-21-common-crawl-ranks-cache.md
docs/superpowers/specs/: 2026-04-21-aggregate-common-crawl-integration-design.md  2026-04-21-common-crawl-ranks-cache-design.md
feedcache/: __main__.py  common.py
feedcache/sources/: aggregate_top_domains.py  cloud_ip_ranges.py  cloudflare_radar.py  common_crawl_ranks.py  domcop.py  majestic.py  public_suffix_list.py  tranco.py  umbrella.py
tests/: test_aggregate_top_domains.py  test_cli.py  test_cloud_ip_ranges.py  test_cloudflare_radar.py  test_common.py  test_common_crawl_ranks.py  test_domcop.py  test_majestic.py  test_public_suffix_list.py  test_tranco.py  test_umbrella.py
